syntax = "proto3";

option go_package = "common/api";

package api;

message Order {
    string ID = 1;
    string customerID = 2;
    string status = 3;
    repeated Items Items = 4;
}

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (Order);
}

message ItemsWithQuantity {
    string customerID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string customerID = 1;
    repeated ItemsWithQuantity Items = 2;
}